add lead actions for boba retro

--- a/docusaurus/docs/volunteering/general/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/general/retrospectives.mdx
@@ -4,38 +4,41 @@ sidebar_position: 3.1
 
 # Retrospectives
 
-After a sprint or other significant effort, the BobaBoard team usually holds a retrospective to discuss what went well,
-what didn't, and how we can improve in the future.
+After a sprint or other significant effort, the BobaBoard team usually holds a retrospective to
+discuss what went well, what didn't, and how we can improve in the future.
 
 ## What is a retrospective
 
-A retrospective is a meeting (or, in our case, "a thread") where volunteers involved in a project reflect
-on the work done, and surface both positive and negative experiences. The goal of a retrospective is to
-improve the experience of those involved in future projects by identifying areas that are working well
-and areas that need rethinking, without assigning blame to participants for issues that might
-have arisen.
+A retrospective is a meeting (or, in our case, "a thread") where volunteers involved in a project
+reflect on the work done, and surface both positive and negative experiences. The goal of a
+retrospective is to improve the experience of those involved in future projects by identifying areas
+that are working well and areas that need rethinking, without assigning blame to participants for
+issues that might have arisen.
 
 At the end of a retrospective, the team should have some answers to the following questions:
 
 1. What have we learned that we didn't know before?
 2. What has worked well during this effort (and thus should be continued)?
 3. What has NOT worked well during this effort (and thus should be changed)?
+4. What are some actionable improvements that we can try in the future?
 
 ### The retrospective mindset
 
-The most important point to internalize is that **retrospectives are a blameless process**. Given a problem
-that happened, the goal of a retrospective is not to identify who caused it and whether they should have
-behaved differently, but what—_other than people being perfect all the time_—could have been done to
-prevent the issue from happening, or to lessen its impact.
+The most important point to internalize is that **retrospectives are a blameless process**. Given a
+problem that happened, the goal of a retrospective is not to identify who caused it and whether they
+should have behaved differently, but what—_other than people being perfect all the time_—could have
+been done to prevent the issue from happening, or to lessen its impact.
 
-In our own process, we especially value ["The Prime Directive of Retrospectives"](https://retrospectivewiki.org/index.php?title=The_Prime_Directive):
+In our own process, we especially value
+["The Prime Directive of Retrospectives"](https://retrospectivewiki.org/index.php?title=The_Prime_Directive):
 
-> Regardless of what we discover, **we understand and _truly believe_ that everyone did the best job they could**,
-> given what they knew at the time, their skills and abilities, the resources available, and
-> the situation at hand.
+> Regardless of what we discover, **we understand and _truly believe_ that everyone did the best job
+> they could**, given what they knew at the time, their skills and abilities, the resources
+> available, and the situation at hand.
 
-Note that this does not mean that people are not responsible for their actions, or that people who consistently
-cause problems should not be held accountable. However, a retrospective is not the place to do so.
+Note that this does not mean that people are not responsible for their actions, or that people who
+consistently cause problems should not be held accountable. However, a retrospective is not the
+place to do so.
 
 ## Retrospectives in practice
 
@@ -43,7 +46,8 @@ A retrospective goes through three phases:
 
 1. Participants list everything that **went well** during the effort
 2. Participants list everything that **did not go well** during the effort
-3. Participants brainstorm ways to continue and expand the practices in #1 while avoiding the mistakes in #2
+3. Participants brainstorm ways to continue and expand the practices in #1 while avoiding the
+   mistakes in #2
 
 :::tip What should I bring to the retrospective?
 
@@ -54,67 +58,72 @@ for each section works best! Further insights will naturally emerge during the d
 
 ### Before a retrospective
 
-A retrospective is usually scheduled a few days after the end of an effort. In the time between the end of the
-effort and the retrospective, volunteers should:
+A retrospective is usually scheduled a few days after the end of an effort. In the time between the
+end of the effort and the retrospective, volunteers should:
 
-1. **Reflect on the effort** and think about what went well and what didn't, both in their personal work and
-   in the team effort as a whole. It's important to think about both positive and negative experiences.
-2. **Prepare points to bring up** during the retrospective, ideally in written form. It's common to forget
-   about issues during the retrospective itself, and a list can be very helpful.
-3. **Think about actionable improvement** that could have helped mitigate some of the issues. It's important
-   that improvements be framed not in terms of changing people's behavior, but in terms of changing the
-   underlying process that led to the issue.
+1. **Reflect on the effort** and think about what went well and what didn't, both in their personal
+   work and in the team effort as a whole. It's important to think about both positive and negative
+   experiences.
+2. **Prepare points to bring up** during the retrospective, ideally in written form. It's common to
+   forget about issues during the retrospective itself, and a list can be very helpful.
+3. **Think about actionable improvement** that could have helped mitigate some of the issues. It's
+   important that improvements be framed not in terms of changing people's behavior, but in terms of
+   changing the underlying process that led to the issue.
 
 :::note
 
-Uncovering what went well during an effort is as important as uncovering what didn't! Awareness of what currently
-works well helps ensure good practices aren't forgotten, and increases confidence when making changes.
+Uncovering what went well during an effort is as important as uncovering what didn't! Awareness of
+what currently works well helps ensure good practices aren't forgotten, and increases confidence
+when making changes.
 
 :::
 
 ### During a retrospective
 
-1. **The Retrospective Lead starts a retrospective thread**, and pings everyone involved in the effort.
-2. The Retrospective Lead shares the agenda for the retrospective, and reminds everyone of the purpose and
-   mindset of the retrospective.
-3. **Everyone shares their thoughts on what went well and what didn't**, and we look for common themes.
+1. **The Retrospective Lead starts a retrospective thread**, and pings everyone involved in the
+   effort.
+2. The Retrospective Lead shares the agenda for the retrospective, and reminds everyone of the
+   purpose and mindset of the retrospective.
+3. **Everyone shares their thoughts on what went well and what didn't**, and we look for common
+   themes.
 
    :::warning
 
    While giving feedback is a fundamental part of the retrospective process, it is important to do so with
    kindness and respect. Please be mindful of your tone and language!
-   
-	 :::
 
-4. Once the main issues have been identified, participants discuss actionable improvements that could have helped
-   mitigate them.
+   :::
+
+4. Once the main issues have been identified, participants discuss actionable improvements that
+   could have helped mitigate them.
 
    :::warning
 
    During a retrospective, try to refrain from using the word "you". Instead of saying—or thinking!—_"you should
    have done X"_, it's important to frame the discussion as _"we should have done X"_. This helps keep the
    retrospective focused on collective improvement rather than individual blame.
-   
-	 :::
+
+   :::
 
 5. The Retrospective Lead (or another participant) summarizes the discussion, and **participants decide on a few
    actionable improvements to implement in the next sprint**.
 
 ### After a retrospective
 
-A succesful retrospective should result in a few actionable improvements that can be implemented in the
-future, ideally starting with the next sprint or effort. These improvements should be captured in the appropriate
-places, and ideally filed as issues in our repositories when applicable.
+A succesful retrospective should result in a few actionable improvements that can be implemented in
+the future, ideally starting with the next sprint or effort. These improvements should be captured
+in the appropriate places, and ideally filed as issues in our repositories when applicable.
 
-Not every change surfaced by a retrospective will be immediately implemented—sometimes it might never be! Despite this,
-it's still important to capture what's discussed. Summaries of past retrospectives can be periodically reviewed and
-taken into consideration as new practices emerge, and offer a blueprint for what to strive for in the longer term.
+Not every change surfaced by a retrospective will be immediately implemented—sometimes it might
+never be! Despite this, it's still important to capture what's discussed. Summaries of past
+retrospectives can be periodically reviewed and taken into consideration as new practices emerge,
+and offer a blueprint for what to strive for in the longer term.
 
 :::tip
 
-If there's a retrospective item you particularly care about seeing implemented, you should feel empowered to take on
-some of the work! Ms Boba or other volunteers will be happy to help you break down the task into manageable pieces,
-or figure out any roadblock that might currently exist.
+If there's a retrospective item you particularly care about seeing implemented, you should feel
+empowered to take on some of the work! Ms Boba or other volunteers will be happy to help you break
+down the task into manageable pieces, or figure out any roadblock that might currently exist.
 
 :::
 
@@ -127,55 +136,56 @@ that others bring up, and be ready to share your thoughts, even if it's simply a
 
 ### ...am not available while the retrospective is happening?
 
-Ms Boba is always available to collect people's thoughts before the retrospective, and (given permission) will
-bring them up herself to make sure they're discussed. If you can't make it to the retrospective, please
-share your thoughts with her beforehand.
+Ms Boba is always available to collect people's thoughts before the retrospective, and (given
+permission) will bring them up herself to make sure they're discussed. If you can't make it to the
+retrospective, please share your thoughts with her beforehand.
 
-After the retrospective, a summary should be available for people to catch up with. Please read the document
-carefully, and let us know if there are additional points or thoughts you'd like to share. The retrospective
-thread remains open after the meeting itself.
+After the retrospective, a summary should be available for people to catch up with. Please read the
+document carefully, and let us know if there are additional points or thoughts you'd like to share.
+The retrospective thread remains open after the meeting itself.
 
 ### ...am worried about being the only one giving feedback?
 
-Ms Boba will always be present in the retrospective, and always has things to discuss. It's unlikely
-that you'll be the only one giving feedback! Regardless, a retrospective is valuable even if only one person
-shares their thoughts, and we encourage you to do so.
+In our experience, seasoned volunteers always have things to discuss during retrospectives, and
+newcomers find it less intimidating to share once they see others . It's unlikely that you'll be the
+only one giving feedback! Regardless, a retrospective is valuable even if only one person shares
+their thoughts, and we encourage you to do so.
 
 ### ...am worried about others taking feedback personally?
 
-Retrospectives are a blameless process that requires team members to trust each other to give feedback kindly
-and respectfully, and to receive it with an open mind and a growth mindset. While emotions are a natural part
-of the process, it's important to keep them in check and not let them take over. If you feel someone is
-not living up to these expectations, please let Ms Boba know privately. Likewise, if you feel you're not
-in the right mindset to continue a discussion, let Ms Boba know so she can redirect the discussion or call
-for a break.
+Retrospectives are a blameless process that requires team members to trust each other to give
+feedback kindly and respectfully, and to receive it with an open mind and a growth mindset. While
+emotions are a natural part of the process, it's important to keep them in check and not let them
+take over. If you feel someone is not living up to these expectations, please let the Retrospective
+Lead know privately. Likewise, if you feel you're note in the right mindset to continue a
+discussion, let Retrospective Lead know so she can redirect the discussion or call for a break.
 
-If there is an issue you're particularly worried in bringing up, you can also share it with Ms Boba before the
-retrospective, and she will bring it up herself without revealing your identity. We also have an anonymous
-feedback form that you can use to share your thoughts.
+If there is an issue you're particularly worried in bringing up, you can also share it with the
+Retrospective Lead before the retrospective, and she will bring it up herself without revealing your
+identity. We also have an anonymous feedback form that you can use to share your thoughts.
 
 ### ...have an issue I want to bring up outside of the retrospective?
 
-You should always feel free to bring up issues, either in private with Ms Boba, in the relevant channels, or
-in our feedback form.
+You should always feel free to bring up issues, either in private with Ms Boba, in the relevant
+channels, or in our feedback form.
 
-Note that we may not be able to discuss or solve all issues the moment they come up. If the team has no
-bandwidth available (for example because urgent work is currently happening), we may need to postpone the
-discussion until a more appropriate time.
+Note that we may not be able to discuss or solve all issues the moment they come up. If the team has
+no bandwidth available (for example because urgent work is currently happening), we may need to
+postpone the discussion until a more appropriate time.
 
-Regardless, it's important that your concerns be heard and acknowledged, and that a plan is made to address
-them in the future. At the time when the issue is brought up, Ms Boba will give you an estimate of when
-the issue can be discussed, and will follow up with you when the time comes. If that shouldn't happen,
-please don't hesitate to ping her!
+Regardless, it's important that your concerns be heard and acknowledged, and that a plan is made to
+address them in the future. At the time when the issue is brought up, Ms Boba will give you an
+estimate of when the issue can be discussed, and will follow up with you when the time comes. If
+that shouldn't happen, please don't hesitate to ping her!
 
 ### Appendix: Why blameless retrospectives?
 
-When a problem happens, it's human tendency to look for someone to blame. While this is a natural reaction,
-it's not a productive one: blaming someone for a problem does not solve the problem, and it does not prevent
-the problem from happening again. It also makes people afraid of making mistakes, which negatively impacts
-the culture of the project and of the organization as a whole.
+When a problem happens, it's human tendency to look for someone to blame. While this is a natural
+reaction, it's not a productive one: blaming someone for a problem does not solve the problem, and
+it does not prevent the problem from happening again. It also makes people afraid of making
+mistakes, which negatively impacts the culture of the project and of the organization as a whole.
 
-Blameless retrospectives are a way to break this cycle. By focusing on the process rather than the people,
-they help participants learn from mistakes and grow as a team, without feeling the need to hide issues away
-or look for a scapegoat. They help us build a culture of trust and respect that makes participating in our
-project a positive experience for everyone involved.
+Blameless retrospectives are a way to break this cycle. By focusing on the process rather than the
+people, they help participants learn from mistakes and grow as a team, without feeling the need to
+hide issues away or look for a scapegoat. They help us build a culture of trust and respect that
+makes participating in our project a positive experience for everyone involved.
