add more to the retro doc

--- a/docusaurus/docs/volunteering/general/leading-a-retro.mdx
+++ b/docusaurus/docs/volunteering/general/leading-a-retro.mdx
@@ -31,10 +31,19 @@ The retrospective lead:
 3. **Defuse the situation if the "prime directive" is breached** and accusatory language is used.
    Bring the discussion back to how we can change our processes to prevent issues from happening,
    and remind participants that mistakes, sometimes significant, are part of any ambitious effort.
+   - If discussion gets heated, you can call for a short break. This might allow participants to
+     step back and get back into a collaborative mindset.
 4. **Call out inappropriate behavior** if unable to bring the discussion back to order, and ask for
    it to stop.
    - If the disruption continues, **call for a timeout and discuss further actions with
      other moderators.**
+
+:::tip
+
+A productive retrospective is a shared goal. While the lead has the ultimate responsibility for
+the above, every participant is empowered to help!
+
+:::
 
 ### Starting a Retrospective
 
