--- a/docusaurus/docs/volunteering/general/retrospectives.mdx
+++ b/docusaurus/docs/volunteering/general/retrospectives.mdx
@@ -78,6 +78,14 @@ when making changes.
 
 :::
 
+#### On actionable improvements
+
+:::TODO
+
+Write good examples of actionable improvements.
+
+:::
+
 ### During a retrospective
 
 1. **The Retrospective Lead starts a retrospective thread**, and pings everyone involved in the
