add and fix images.

--- a/src/content/docs/development/boba-editor/the-delta-format.mdx
+++ b/src/content/docs/development/boba-editor/the-delta-format.mdx
@@ -44,7 +44,7 @@ array of insert operations.
     { "insert": 
       { 
         "block-image": {
-          "src": "/img/documentation/cool.png",
+          "src": "../../../assets/img/documentation/cool.png",
           "width": "200",
           "height": "106"
         }
