--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -80,7 +80,7 @@ $PSVersionTable
 Your output should look something like the below screenshot with your version
 listed near at top of the list.
 
-![terminal screenshot](/img/development/wsl/powershell_version.png)
+![terminal screenshot](../../../../assets/img/development/wsl/powershell_version.png)
 
 Follow
 [these instructions](https://learn.microsoft.com/en-us/powershell/scripting/install/installing-powershell-on-windows?view=powershell-7.3#install-powershell-using-winget-recommended)
@@ -141,11 +141,11 @@ select Ubuntu or your Linux distro from the list.
 <!-- prettier-ignore-end -->
 
 <img
-  src="/img/development/wsl/powershell_profiles.png"
+  src="../../../../assets/img/development/wsl/powershell_profiles.png"
   style={{ width: "45%", paddingRight: 5 }}
 />
 <img
-  src="/img/development/wsl/powershell_wsl_tab.png"
+  src="../../../../assets/img/development/wsl/powershell_wsl_tab.png"
   style={{ width: "45%" }}
 />
 
