--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,7 +18,7 @@ hero:
     file: ../../assets/houston.webp
   actions:
     - text: Example Guide
-      link: /guides/example/
+      link: /development/intro
       icon: right-arrow
     - text: Read the Starlight docs
       link: https://starlight.astro.build
