everything visible renders.

--- a/src/content/docs/development/boba-editor/the-delta-format.mdx
+++ b/src/content/docs/development/boba-editor/the-delta-format.mdx
@@ -2,9 +2,10 @@
 title: The Delta Format
 sidebar:
   order: 2
+  hidden: true
 ---
 
-import EditorPreview from "/src/components/EditorPreview.js";
+import EditorPreview from "../../../../components/EditorPreview";
 
 The Delta format is at the base of QuillJS's text editing capabilities. You can
 [read the in-depth guide](https://quilljs.com/docs/delta/) on the QuillJS
