--- a/src/content/docs/project/mockups/layout.mdx
+++ b/src/content/docs/project/mockups/layout.mdx
@@ -1,5 +1,7 @@
 ---
 title: Layout
+sidebar:
+  hidden: true
 ---
 
 In this section you can find low-res mockups of the various components that form
