--- a/src/content/docs/project/roadmap/sprints-and-projects.mdx
+++ b/src/content/docs/project/roadmap/sprints-and-projects.mdx
@@ -1,5 +1,7 @@
 ---
 title: Sprints and projects
+sidebar:
+  hidden: true
 ---
 
 import ProjectsList from "@site/src/components/github/ProjectsList";
