--- a/src/content/docs/volunteering/coding/github/labels.mdx
+++ b/src/content/docs/volunteering/coding/github/labels.mdx
@@ -1,5 +1,7 @@
 ---
 title: Issue Labels
+sidebar:
+  hidden: true
 ---
 
 import FilteredLabelsList from "/src/components/github/FilteredLabelsList";
