--- a/src/content/docs/volunteering/experience/volunteer-application.mdx
+++ b/src/content/docs/volunteering/experience/volunteer-application.mdx
@@ -2,7 +2,7 @@
 title: Apply to Volunteer
 ---
 
-import VolunteerNewsletterForm from "@site/src/components/VolunteerNewsletterForm";
+import VolunteerNewsletterForm from "../../../../components/VolunteerNewsletterForm";
 
 ## The Ideal Volunteer
 
@@ -12,6 +12,7 @@ required to meet them all every day and in every situation, because no one is
 perfect! However, if you find yourself frequently thinking you can't or don't
 want to do these things while reading the list, BobaBoard may not be a good
 cultural fit for you.
+
 
 :::TODO
 
