--- a/src/content/docs/project/mockups/layout.mdx
+++ b/src/content/docs/project/mockups/layout.mdx
@@ -11,13 +11,13 @@ proposals.
 
 ## Regular board layout
 
-![test](./board_background.excalidraw)
+{/* ![test](./board_background.excalidraw) */}
 
 For now, this is the only one we have, mostly because Ms Boba went into a rabbit
 hole about integrating excalidraw into MDX files.
 
 ## Mobile board layout
 
-![test](./mobile-board.excalidraw)
+{/* ![test](./mobile-board.excalidraw) */}
 
 Now we have another, because Ms Boba is drunk with power
