update hidden docs to drafts.

--- a/src/content/docs/volunteering/coding/github/labels.mdx
+++ b/src/content/docs/volunteering/coding/github/labels.mdx
@@ -1,7 +1,6 @@
 ---
 title: Issue Labels
-sidebar:
-  hidden: true
+draft: true
 ---
 
 BobaBoard uses labels to classify issues and feature requests according to a
