--- a/src/content/docs/project/mockups/layout.mdx
+++ b/src/content/docs/project/mockups/layout.mdx
@@ -1,7 +1,6 @@
 ---
 title: Layout
-sidebar:
-  hidden: true
+draft: true
 ---
 
 In this section you can find low-res mockups of the various components that form
