organize project guide sidebar.

--- a/src/content/docs/project/mockups/layout.mdx
+++ b/src/content/docs/project/mockups/layout.mdx
@@ -1,6 +1,8 @@
 ---
 title: Layout
 draft: true
+sidebar:
+  order: 8
 ---
 
 In this section you can find low-res mockups of the various components that form
