--- a/src/content/docs/project/roadmap/priorities-and-status.mdx
+++ b/src/content/docs/project/roadmap/priorities-and-status.mdx
@@ -1,5 +1,7 @@
 ---
 title: Priorities and status
+sidebar:
+  order: 2
 ---
 
 inspiration: https://docs.oscollective.org/guides/marketing-publicity-roadmaps-and-comms#why-a-roadmap
